[project]
name = "learn-fast-api-backend"
version = "0.0.0"
description = ""
authors = [{ name = "SangUk Park", email = "parksang1993@gmail.com" }]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
